<resources>
    <string name="app_name">XClipper</string>
    <string name="app_name_full">XClipper - Smart clipboard manager</string>
    <string name="accessibility_service_description">This will let XClipper to monitor clipboard &amp; will able to capture some of known strategies if system detects any copy/cut action.\n\n\nThis feature is still in BETA for Android 10+ users and may not work always.</string>
    <string name="testStringSmall">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</string>
    <string name="timeString">2 days ago</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="selected">selected</string>
    <string name="ctc">Copied to clipboard</string>
    <string name="item_delete">item(s) deleted</string>
    <string name="delete_all">Delete All</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Deselect All</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="edit_success">Changes saved!</string>
    <string name="error_empty_text">Empty text to update</string>
    <string name="search">Search</string>
    <string name="sync">Sync</string>
    <string name="sync_complete">Data synchronization complete</string>
    <string name="error_sync">Couldn\'t validate data</string>
    <string name="error_sync_uninitialized">Device is not connected to a database</string>
    <string name="help">Help</string>
    <string name="faqs">FAQs</string>
    <string name="more">More</string>
    <string name="tag">Filter Tag</string>
    <string name="custom_tags">Filter Tags</string>
    <string name="add_remove_tags">Edit Tags</string>
    <string name="write_here">Write here…</string>
    <string name="error_duplicate_data">Duplicate data insertion</string>
    <string name="error_tag_dependent">Some items are dependent on this tag</string>
    <string name="specials">Specials</string>
    <string name="define"><b>Define:</b></string>
    <string name="open_link">Open with…</string>
    <string name="shorten_link">Shorten link</string>
    <string name="err_action">Couldn\'t find the action</string>
    <string name="copy_name">Copy</string>
    <string name="phone_call">Make a phone call</string>
    <string name="canc">Create a new contact</string>
    <string name="message_num">Text this number</string>
    <string name="search_web">Search as a query</string>
    <string name="send_mail">Send a mail</string>
    <string name="search_map">Search on map</string>
    <string name="channel_name">Notification channel</string>
    <string name="channel_update">Update channel</string>
    <string name="more_actions">Special actions</string>
    <string name="clip_content">Clipboard content</string>
    <string name="title_activity_settings">Settings</string>
    <string name="set_service">service_pref</string>
    <string name="service">General</string>
    <string name="look_feel"><![CDATA[Look & Feel]]></string>
    <string name="set_look">look_pref</string>
    <string name="set_backup">backup_pref</string>
    <string name="backup">Backup</string>
    <string name="actions">Actions</string>
    <string name="settings">Settings</string>
    <string name="service_summary">Make sure it is turned on to detect clipboard changes (require accessibility service)</string>
    <string name="service_title">Clipboard Service</string>
    <string name="lang_dialog_title">Select dictionary language</string>
    <string name="lang_title">Language Code</string>
    <string name="lang_summary">Define language for finding definition of word (usually seen in special actions)</string>
    <string name="cancel">Cancel</string>
    <string name="stc">Scan to connect</string>
    <string name="connection_exist">Already connected to database!</string>
    <string name="err_device_validate">Session expired!</string>
    <string name="account">Synchronization</string>
    <string name="bind_title">Database binding</string>
    <string name="bind_summary">Enable uploading of device data to the database</string>
    <string name="logout_summary">Remove all connection with the database</string>
    <string name="logout_title">Logout</string>
    <string name="connect_summary">Initialize a connection to an online database for cross platform syncing</string>
    <string name="connect_title">Connect to database</string>
    <string name="alert">Alert</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="close">Close</string>
    <string name="logout_success">Logged out successfully!</string>
    <string name="err_uid">Not a valid UID</string>
    <string name="quick_settings_save_clip">Save Clip</string>
    <string name="connect_success">Connected successfully!</string>
    <string name="accessibility_capture">In order to monitor clipboard you need to enable the accessibility service from settings.\n\n1. Click OK to open accessibility settings.\n2. Click on Installed Services (Samsung).\n3. Search for XClipper.\n4. Click and enable it.</string>
    <string name="suggestion_capture">You need to enable System overlay permission.\n\n1. Click OK to open Display Overlay settings.\n2. Enable \"Allow display over other apps\".</string>
    <string name="synchronize_text">You can synchronize your clipboard data between this device &#38; a desktop companion app. Click on \"Learn more\" to know about it.</string>
    <string name="scan_code">Scan the app code</string>
    <string name="connect_request">Attempting to make a connection with database…</string>
    <string name="dark_title">Dark Theme</string>
    <string name="dark_summary">Sometimes you might\'ve to restart the app for theme to get applied properly.</string>
    <string name="import_file">Import from file</string>
    <string name="import_summary">Retrieve all the data from an exported local database</string>
    <string name="database_export">Database has been exported!</string>
    <string name="database_import">Database has been imported!</string>
    <string name="err_database_export">Error in exporting the database</string>
    <string name="err_import_database">Couldn\'t resolve the input stream</string>
    <string name="restart_app">Restart App</string>
    <string name="restart_summary">You need to restart the app in order to apply changes!</string>
    <string name="xcopy">XCopy</string>
    <string name="blacklist_summary">Apps in which clipboard tracking is disabled</string>
    <string name="blacklist_title">Ignored Apps</string>
    <string name="suggest_title">Suggestions</string>
    <string name="suggest_summary">[BETA] Show a small bubble whenever keyboard pops out containing your latest clips</string>
    <string name="palette1_text">XClipper monitors your clipboard and makes an extensive use of it.\n\n\nIt also provide certain actions according to the data.\n\n\nWith suggestion overlay, you can easily paste from multiple clipboards.</string>
    <string name="palette2_text">Accessibility,\n\n\nYou need to turn on \"accessibility\" service for this app.\n\n\nThis is due to a restriction imposed by Google which does not allow long running background tasks.\n\n\nThis service will keep running in background capturing your clipboard data.</string>
    <string name="palette3_text">Suggestions [BETA],\n\n\nGet a small bubble whenever keyboard pops out containing all your clips.\n\n\nEnable it from App Settings > General > Suggestions.</string>
    <string name="palette4_text">Android 10+ user,\n\n\nSometimes standard copy doesn\'t work, in such case use \"XCopy\".</string>
    <string name="palette5_text">Android 10+ user,\n\n\nSometimes copy action is not detected, in such case use "Save Clip" feature.</string>
    <string name="palette6_text">Synchronization,\n\n\nThe application works best with it\'s Windows desktop app.\n\n\nIt allows you to synchronize clipboard data across devices.\n\n\nVisit https://kaustubhpatange.github.io/XClipper/docs for more info.</string>
    <string name="palette7_text">Wrapping up,\n\n\nWatch video to understand full feature usage of application.\n\n\nhttps://youtube.com</string>
    <string name="palette_android_text">Android 10+ user,\n\n\nDue to new introduced privacy changes clipboard monitoring has stopped working from Android 10.\n\n\nFind more info about this issue on issue tracker https://issuetracker.google.com/issues/123461156\n\n\nBut through some hacks (not perfect one) we can enable it using an accessibility service.\n\n\nThis feature is still in BETA!</string>
    <string name="palette_improve_detection">Android 10+ user,\n\n\n\You can \"Improve Clipboard Detection\" through some additional configuration done via PC.\n\n\nRun the following ADB commands with device connected &amp; \"USB Debugging\" enabled.</string>
    <string name="next_1">Next 1/8</string>
    <string name="next_2">Next 2/8</string>
    <string name="next_3">Next 3/8</string>
    <string name="next_4">Next 4/8</string>
    <string name="next_5">Next 5/8</string>
    <string name="next_6">Next 6/8</string>
    <string name="next_7">Next 7/8</string>
    <string name="nextd_1">Next 1/4</string>
    <string name="nextd_2">Next 2/4</string>
    <string name="nextd_3">Next 3/4</string>
    <string name="nextd_4">Next 4/4</string>
    <string name="next_8">Finish</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="ask_suggestion">Show overlay suggestion</string>
    <string name="err_database">Invalid backup structure</string>
    <string name="author_title">Owner</string>
    <string name="mail_title">Send me an email</string>
    <string name="mail_summary">Want to give feedback or a quick chat just hit me up</string>
    <string name="version_title">Version</string>
    <string name="package_title">Package</string>
    <string name="upgrade">Upgrades</string>
    <string name="about">About</string>
    <string name="auto_sync_title">Automatic synchronization</string>
    <string name="layout_empty_text">Copy text or click to create a new empty paste</string>
    <string name="auto_sync_summary">Retrieve data from database when app is launched</string>
    <string name="bind_delete_title">Capture Delete</string>
    <string name="bind_delete_summary">Enable local removal of item if it is being deleted across device</string>
    <string name="force_logout_title">Force logout</string>
    <string name="force_logout_summary">Sometimes logout doesn\'t succeed as expected. Use this to forcefully remove the credentials</string>
    <string name="force_logout_text">Silently send a logout request</string>
    <string name="standard_pricing">Get a standard pricing model with maximum server storage you can get.</string>
    <string name="premium_pricing">Synchronize your clipboard activity with PC securely for lifetime.</string>
    <string name="awesome">You are awesome!</string>
    <string name="show_stacktrace">Show stacktrace</string>
    <string name="crash_text_sent">And it has been reported to my server. So you don\'t need to perform any additional step.</string>
    <string name="crash_title">We crashed,</string>
    <string name="terms_decline">Decline</string>
    <string name="terms_agree">Accept</string>
    <string name="terms_check_privacy_policy"><![CDATA[I agree with the <b>Privacy Policy</b>]]></string>
    <string name="terms_title">Disclosure Agreement</string>
    <string name="terms_check_agreement"><![CDATA[I agree with the <b>Agreement</b>]]></string>
</resources>