<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Find a tag icon. -->

    <item android:id="@+id/action_tag"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />
<!--
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_faq"
        android:title="@string/faqs"
        app:showAsAction="never" />-->

</menu>