<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Main">

        <SwitchPreferenceCompat
            app:key="service_pref"
            android:summary="@string/service_summary"
            app:title="@string/service_title" />

        <MultiSelectListPreference
            app:key="blacklist_pref"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            android:summary="Apps in which clipboard capturing is disabled"
            android:title="Ignored Apps"/>

     <!--   <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="Other">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="lang_pref"
            app:title="@string/lang_title"
            android:summary="@string/lang_summary"/>

        <!--<SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>
</PreferenceScreen>
