<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="5dp">

    <include
        android:id="@+id/_notch"
        layout="@layout/common_sheet_notch" />

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_documents"
        app:layout_constraintBottom_toTopOf="@id/_viewStub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_notch"
        app:tint="?colorPrimary" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp" />

    <TextView
        android:id="@+id/_tv_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/terms_title"
        android:textColor="?colorTextPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/_guide"
        app:layout_constraintTop_toBottomOf="@id/_notch" />

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:textColor="?colorTextSecondaryLight"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/_guide"
        app:layout_constraintTop_toBottomOf="@id/_tv_id"
        tools:text="Updated 30/10/2021" />

    <ViewStub
        android:id="@+id/_viewStub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_viewStub">


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:textColor="?colorTextSecondary"
                android:textSize="14sp"
                tools:text="@tools:sample/lorem/random" />

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B4000000"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <CheckBox
                android:id="@+id/cb_agreement"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/terms_check_agreement"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/cb_privacy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/cb_privacy"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/terms_check_privacy_policy"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_agreement" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_decline"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/terms_decline"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_privacy" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/terms_agree"
                android:textAllCaps="false"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_privacy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>