<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/tools"
    android:id="@+id/mainCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="7dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ci_timeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/ci_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/testStringSmall"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ci_copyButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ci_copyButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/ci_tagLayout"
                android:layout_width="0dp"
                android:padding="1dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexDirection="row_reverse"
                app:flexWrap="wrap"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ci_timeText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </com.google.android.flexbox.FlexboxLayout>
            <TextView
                android:id="@+id/ci_timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/timeString"
                android:textColor="@color/colorSeparator"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ci_tagLayout"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/hiddenLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ci_timeText">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorSeparator" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:columnCount="3"
                android:rowCount="1">

                <Button
                    android:id="@+id/ci_btn_edit"
                    style="@style/ButtonStyle"
                    android:layout_columnWeight="1"
                    android:drawableTop="@drawable/ic_edit"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/edit"
                    grid:layout_columnWeight="1" />

                <!-- TODO: Find a good icon for Special/More button -->

                <Button
                    android:id="@+id/ci_btn_special"
                    style="@style/ButtonStyle"
                    android:layout_columnWeight="1"
                    android:drawableTop="@drawable/ic_special"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/more"
                    grid:layout_columnWeight="1" />

                <Button
                    android:id="@+id/ci_btn_share"
                    style="@style/ButtonStyle"
                    android:layout_columnWeight="1"
                    android:drawableTop="@drawable/ic_share"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/share"
                    grid:layout_columnWeight="1" />
            </GridLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>